# quad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
config/aircraft/F450/: F450.xml  reset00.xml
config/output/: OutputCSV.xml  OutputFG.xml
